--- a/cub3.html
+++ b/cub3.html
@@ -7,20 +7,21 @@
 </head>
 <body>
 <h1 class="z">Мои животинки</h1>
+<div class="outer">
 <div id="wrapper">
  <div id="cube">
-<a href="DSC08537.JPG" title="Булочка" class ="side" id="side1"></a>
-<a href="95.jpg" title="Персик" class ="side" id="side2"></a>
-<a href="98.jpg" title="Кларка" class ="side" id="side3"></a>
-<a href="DSC00513.jpg" title="Позитив" class ="side" id="side4"></a>
-<a href="06022010097.jpg" title="Анфиса" class ="side" id="side5"></a>
-<a href="104.jpg" title="Муха" class ="side" id="side6"></a>
+<a href="Bulka.html" data-title="Булочка" class ="side" id="side1"></a>
+<a href="Peach.html" data-title="Персик" class ="side" id="side2"></a>
+<a href="Klara.html" data-title="Кларка" class ="side" id="side3"></a>
+<a href="Positiv.html" data-title="Позитив" class ="side" id="side4"></a>
+<a href="Anfisa.html" data-title="Анфиса" class ="side" id="side5"></a>
+<a href="Fly.html" data-title="Муха" class ="side" id="side6"></a>
 
-
+</div>
  </div>
 </div>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 	<script>
 		$(function(){
 			$(wrapper).mousemove(function(e){
